--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,35 +1,25 @@
 {
-  "name": "frontend",
-  "private": true,
+  "name": "vite-template-solid",
   "version": "0.0.0",
-  "type": "module",
+  "description": "",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test:run": "vitest run",
-    "test:watch": "vitest watch",
-    "test:ui": "vitest ui"
+    "build": "vite build",
+    "serve": "vite preview"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "sass": "^1.58.3",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.1",
+    "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
-    "@vitest/ui": "^0.28.4",
-    "jsdom": "^21.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0",
-    "vitest": "^0.28.4"
+    "@solidjs/router": "^0.7.0",
+    "@suid/icons-material": "^0.5.9",
+    "@suid/material": "^0.10.2",
+    "@suid/vite-plugin": "^0.1.2",
+    "solid-js": "^1.6.11"
   }
 }
