server update and refactoring
- added dbinfo apis & non-http tests

--- a/server/config.yml
+++ b/server/config.yml
@@ -19,3 +19,6 @@ auth:
         domain: localhost
         path: /
         name: refresh_token
+database:
+    url: ${DATABASE_URL}
+    sa_url: ${POSTGRES_URL}
